other/verify-vpa-target/.chainsaw-test/prereq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:latest
        name: busybox
        command:
        - "sleep"
        - "3000"
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-busybox
spec:
  selector:
    matchLabels:
      name: good-daemonset
  template:
    metadata:
      labels:
        name: good-daemonset
    spec:
      containers:
      - image: busybox:latest
        name: busybox
        command:
        - "sleep"
        - "3000"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ss-busybox
spec:
  selector:
    matchLabels:
      app: busybox
  serviceName: busyservice
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:latest
        name: busybox
        command:
        - "sleep"
        - "3000"
